--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+#  login  変更箇所
+  sqflite: any
+  path_provider: ^0.4.0
+  shared_preferences: ^0.5.4
+
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +49,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+# login 変更箇所
+  assets:
+    - data/flutter.db
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
