--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,13 @@ dependencies:
   cupertino_icons: ^0.1.3
 #  login  変更箇所
   sqflite: any
-  path_provider: ^0.4.0
   shared_preferences: ^0.5.4
 
+#infoOfLogin変更箇所
+  provider: ^4.3.0
+  path_provider: ^1.6.0
+  intl: ^0.16.0
+  datetime_picker_formfield: ^1.0.0
 
 dev_dependencies:
   flutter_test:
