--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,14 @@ dependencies:
   sqflite: any
   path_provider: ^0.4.0
   shared_preferences: ^0.5.4
+  uuid: 2.0.4
 
+  intl: ^0.16.0
+  datetime_picker_formfield: ^1.0.0
+
+  provider: ^4.0.2
+  barcode_scan: ^2.0.1
+  page_view_indicators: ^1.1.0
 
 dev_dependencies:
   flutter_test:
