--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   page_view_indicators: ^1.1.0
   provider: ^4.3.0
   path_provider: ^1.6.0
+  page_indicator: ^0.3.0
 
 dev_dependencies:
   flutter_test:
